# QuaRot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
benchmarks/: hadamard_benchmark.py  qattention_benchmark.py  qlinear_benchmark.py
e2e/: __init__.py  benchmark.py  benchmark_layer.py
e2e/checkpoint_utils/: data_utils.py  gptq_utils.py  quantize_llama_checkpoint.py  rotation_utils.py
e2e/quantized_llama/: modeling_llama.py
fake_quant/: README.md  data_utils.py  eval_utils.py  gptq_utils.py  hadamard_utils.py  main.py  model_utils.py  monkeypatch.py  quant_utils.py  rotation_utils.py  run.sh  utils.py
quarot/: __init__.py
quarot/functional/: __init__.py  hadamard.py  quantization.py
quarot/kernels/: bindings.cpp  flashinfer.cu  gemm.cu  quant.cu
quarot/kernels/include/: common.h  flashinfer.h  gemm.h  int4.h  quant.h  util.h
quarot/kernels/include/flashinfer/: math.cuh  page.cuh  vec_dtypes.cuh
quarot/nn/: __init__.py  hadamard.py  linear.py  normalization.py  quantization.py
quarot/transformers/: __init__.py  kv_cache.py
